Stage Drive/Website/justbitteam-stagedriving_web-13ee93e41663/.kube/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-prod-web
  labels:
    app: sd-prod-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd-prod-web
  template:
    metadata:
      labels:
        app: sd-prod-web
    spec:
      containers:
      - image: gcr.io/stage-driving/bitbucket.org/justbitteam/stagedriving_web:f4bc757aab2154acfd150398d512a44b7440a6b2
        name: sd-prod-web
        ports:
        - containerPort: 80
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: 50m
