Stage Drive/Website/justbitteam-stagedriving_web-13ee93e41663/.kube/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sd-prod-web
  name: sd-prod-web
spec:
  type: NodePort
  ports:
    # The port that this service should serve on.
    - port: 8080
      targetPort: 80
      protocol: TCP
  # Label keys and values that must match in order to receive traffic for this service
  selector:
    app: sd-prod-web
