Stage Drive/Website/justbitteam-stagedriving_web-13ee93e41663/.kube/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.global-static-ip-name: "web-public-ip"
  name: sd-prod-web
spec:
  tls:
  - hosts:
    - www.stagedriving.com
    - stagedriving.com
    secretName: sd-prod-secret
  rules:
  - host: stagedriving.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sd-prod-web
          servicePort: 8080
  - host: www.stagedriving.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sd-prod-web
          servicePort: 8080
